force-app/main/default/objects/Payment_Gateway__mdt/fields/Payment_Gateway_Return_URL__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway_Return_URL__c</fullName>
    <label>Payment Gateway Return URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>