force-app/main/default/objects/Payment_Gateway__mdt/fields/Self_Signed_Cert_Name__c.field-meta.xml
<CustomField>
    <fullName>Self_Signed_Cert_Name__c</fullName>
    <label>Self Signed Cert Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>